<resources>
    <string name="app_name">WollPaper</string>
    <string name="with">with</string>
    <string name="keyword">Keyword</string>
    <string name="photo_by">Photo by</string>
    <string name="use_photo">Use photo</string>
    <string name="open_on_pexels">Open on Pexels</string>
    <string name="confirm_photo_as_wallpaper_lock_screen">Confirm this photo as wallpaper and lock screen image?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="all_done_smile">\"All done! :)\"</string>
    <string name="confirm_action">Confirm action</string>
</resources>