<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/road"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textDialogConfirmTitle"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:text="@string/confirm_action"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textDialogConfirmText"
        android:layout_marginTop="32dp"
        style="@style/Text.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_photo_as_wallpaper_lock_screen" />


    <LinearLayout
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDialogConfirmNegative"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            style="@style/Button.Flat.Primary"
            android:layout_width="0dp"
            android:text="@string/cancel"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonDialogConfirmPositive"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            style="@style/Button.Flat.Secondary"
            android:layout_width="0dp"
            android:text="@string/confirm"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>