<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/wallpaperDetailsProgress"
        android:elevation="20dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/niagara"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/wallpaperDetailsBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:minHeight="260dp"
        android:padding="24dp"
        android:background="@drawable/wallpaper_detail_header_gradient_black"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_by"/>

        <TextView
            android:id="@+id/wallpaperDetailsAuthorName"
            style="@style/Text.Title"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Kaique Rocha"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp">

        <Button
            android:id="@+id/wallpaperDetailsButtonUsePhoto"
            android:layout_width="0dp"
            app:backgroundTint="@null"
            android:layout_height="wrap_content"
            style="@style/Button.Flat.Primary"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/use_photo"
            android:layout_weight="1" />

        <Button
            android:id="@+id/wallpaperDetailsButtonOpenPexels"
            android:layout_width="0dp"
            app:backgroundTint="@null"
            android:layout_height="wrap_content"
            android:text="@string/open_on_pexels"
            style="@style/Button.Flat.Secondary"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>