<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textAppName"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAppNameSubLabel"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/with"
            app:layout_constraintStart_toStartOf="@id/textAppName"
            app:layout_constraintTop_toBottomOf="@id/textAppName" />

        <ImageView
            android:id="@+id/imagePexelsLogo"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/pexels_logo_white"
            app:layout_constraintBottom_toBottomOf="@id/textAppNameSubLabel"
            app:layout_constraintStart_toEndOf="@id/textAppNameSubLabel"
            app:layout_constraintTop_toTopOf="@id/textAppNameSubLabel" />

        <FrameLayout
            android:id="@+id/frameLayoutSearchBarContainer"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/imagePexelsLogo">

            <EditText
                android:id="@+id/editTextInputSearch"
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="110dp"
                android:hint="@string/keyword"
                android:textColorHint="@color/plate" />

            <FrameLayout
                android:id="@+id/frameLayoutButtonSearch"
                style="@style/Button"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/imageSearchButtonIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_search" />

                <ProgressBar
                    android:id="@+id/progressBarSearchButtonIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />

            </FrameLayout>

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/frameLayoutSearchBarContainer"
            android:id="@+id/recyclerWallpaperList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="20"
            android:layout_marginTop="48dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/wallpaper_card_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
